src/tests/snapshots/amber__tests__translating__add_int_expression.ab__zsh.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            Log(
                LogFragment {
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                Raw(
                                    RawFragment {
                                        value: "15",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "45",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Add,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                Arithmetic(
                                    ArithmeticFragment {
                                        left: Some(
                                            Raw(
                                                RawFragment {
                                                    value: "39",
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        right: Some(
                                            Raw(
                                                RawFragment {
                                                    value: "21",
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        op: Add,
                                        quoted: true,
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "80",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Add,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Arithmetic(
                        ArithmeticFragment {
                            left: Some(
                                Arithmetic(
                                    ArithmeticFragment {
                                        left: Some(
                                            Arithmetic(
                                                ArithmeticFragment {
                                                    left: Some(
                                                        Raw(
                                                            RawFragment {
                                                                value: "3",
                                                                with_condition: false,
                                                            },
                                                        ),
                                                    ),
                                                    right: Some(
                                                        Raw(
                                                            RawFragment {
                                                                value: "9",
                                                                with_condition: false,
                                                            },
                                                        ),
                                                    ),
                                                    op: Add,
                                                    quoted: true,
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        right: Some(
                                            Raw(
                                                RawFragment {
                                                    value: "648",
                                                    with_condition: false,
                                                },
                                            ),
                                        ),
                                        op: Add,
                                        quoted: true,
                                        with_condition: false,
                                    },
                                ),
                            ),
                            right: Some(
                                Raw(
                                    RawFragment {
                                        value: "1232",
                                        with_condition: false,
                                    },
                                ),
                            ),
                            op: Add,
                            quoted: true,
                            with_condition: false,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
